clusters/app.ci/cert-manager/grafana-loki_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cert-issuer
  name: grafana-loki
  namespace: grafana-loki
spec:
  tls:
  - secretName: grafana-loki-tls
    hosts:
    - grafana-loki.ci.openshift.org
  rules:
  - host: grafana-loki.ci.openshift.org
    http:
      paths:
      - backend:
          service:
            name: grafana
            port:
              number: 3000
        pathType: ImplementationSpecific
