clusters/app.ci/cert-manager/prow-internal_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cert-issuer
    route.openshift.io/termination: "reencrypt"
  name: prow-internal
  namespace: ci
spec:
  tls:
    - secretName: prow-internal-tls
      hosts:
        - deck-internal.ci.openshift.org
  rules:
  - host: deck-internal.ci.openshift.org
    http:
      paths:
      - backend:
          service:
            name: deck-internal
            port:
              number: 443
        pathType: ImplementationSpecific
