clusters/app.ci/cert-manager/release-controller_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cert-issuer
  name: release-controller
  namespace: ci
spec:
  ingressClassName: openshift-default
  tls:
    - secretName: release-controller-tls
      hosts:
        - amd64.ocp.releases.ci.openshift.org
        - arm64.ocp.releases.ci.openshift.org
        - ppc64le.ocp.releases.ci.openshift.org
        - s390x.ocp.releases.ci.openshift.org
        - multi.ocp.releases.ci.openshift.org
        - multi-2.ocp.releases.ci.openshift.org
        - amd64.origin.releases.ci.openshift.org
        - arm64.origin.releases.ci.openshift.org
        - origin-release.ci.openshift.org
        - hcp.releases.ci.openshift.org
  rules:
  - host: amd64.origin.releases.ci.openshift.org
    http:
      paths:
      - backend:
          service:
            name: release-controller-api-okd
            port:
              number: 80
        pathType: ImplementationSpecific
  - host: arm64.origin.releases.ci.openshift.org
    http:
      paths:
      - backend:
          service:
            name: release-controller-api-okd-arm64
            port:
              number: 80
        pathType: ImplementationSpecific
  - host: origin-release.ci.openshift.org
    http:
      paths:
      - backend:
          service:
            name: release-controller-api-okd
            port:
              number: 80
        pathType: ImplementationSpecific
  - host: amd64.ocp.releases.ci.openshift.org
    http:
      paths:
      - backend:
          service:
            name: release-controller-api-ocp
            port:
              number: 80
        pathType: ImplementationSpecific
  - host: arm64.ocp.releases.ci.openshift.org
    http:
      paths:
      - backend:
          service:
            name: release-controller-api-ocp-arm64
            port:
              number: 80
        pathType: ImplementationSpecific
  - host: ppc64le.ocp.releases.ci.openshift.org
    http:
      paths:
      - backend:
          service:
            name: release-controller-api-ocp-ppc64le
            port:
              number: 80
        pathType: ImplementationSpecific
  - host: s390x.ocp.releases.ci.openshift.org
    http:
      paths:
      - backend:
          service:
            name: release-controller-api-ocp-s390x
            port:
              number: 80
        pathType: ImplementationSpecific
  - host: multi.ocp.releases.ci.openshift.org
    http:
      paths:
      - backend:
          service:
            name: release-controller-api-ocp-multi
            port:
              number: 80
        pathType: ImplementationSpecific
  - host: multi-2.ocp.releases.ci.openshift.org
    http:
      paths:
      - backend:
          service:
            name: release-controller-api-ocp-multi-2
            port:
              number: 80
        pathType: ImplementationSpecific
  - host: hcp.releases.ci.openshift.org
    http:
      paths:
      - backend:
          service:
            name: release-controller-api-hypershift
            port:
              number: 80
        pathType: ImplementationSpecific
