clusters/app.ci/cert-manager/search_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cert-issuer
  name: search
  namespace: ci-search
spec:
  tls:
    - secretName: search-tls
      hosts:
        - search.ci.openshift.org
  rules:
    - host: search.ci.openshift.org
      http:
        paths:
          - backend:
              serviceName: search
              servicePort: 80
